# sendmail-into-mbox

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
misc/: sendmail-into-mbox.toml  sendmail.into-mbox
src/: config.rs  error.rs  mail_message.rs  main.rs
