[package]
name = "in-house-sendmail"
license = "MIT"
authors = ["@cat_in_136"]
categories = ["command-line-utilities", "email"]
description = "In-house sendmail command to read email from stdin and save to file"
homepage = "https://github.com/cat-in-136/in-house-sendmail"
readme = "README.md"
keywords = ["sendmail", "mbox"]
repository = "https://github.com/cat-in-136/in-house-sendmail"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }