[package]
name = "sendmail-into-mbox"
license = "MIT"
authors = ["@cat_in_136"]
categories = ["command-line-utilities", "email"]
description = "Alternative sendmail command to read email from stdin and write to a mbox file directly"
homepage = "https://github.com/cat-in-136/sendmail-into-mbox"
readme = "README.md"
keywords = ["sendmail", "mbox"]
repository = "https://github.com/cat-in-136/sendmail-into-mbox"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
