[package]
name = "sendmail-into-mbox"
license = "MIT"
authors = ["@cat_in_136"]
categories = ["command-line-utilities", "email"]
description = "Alternative sendmail command to read email from stdin and write to a mbox file directly"
homepage = "https://github.com/cat-in-136/sendmail-into-mbox"
readme = "README.md"
keywords = ["sendmail", "mbox"]
repository = "https://github.com/cat-in-136/sendmail-into-mbox"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.5"

[dev-dependencies]
tempfile = "3"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/sendmail-into-mbox", dest = "/usr/sbin/sendmail-into-mbox", user = "root", group = "mail", mode = "2755" },
    { source = "misc/sendmail.into-mbox", dest = "/usr/sbin/sendmail.into-mbox", mode = "0755" },
    { source = "misc/sendmail-into-mbox.toml", dest = "/etc/sendmail-into-mbox.toml", mode = "0644", config = true }
]
post_install_script = """
/usr/sbin/alternatives  --install /usr/sbin/sendmail mta /usr/sbin/sendmail.into-mbox 10
"""
pre_uninstall_script = """
#only remove in case of erase (but not at upgrade)
if [ $1 -eq 0 ] ; then
  /usr/sbin/alternatives --remove mta /usr/sbin/sendmail.into-mbox
fi
exit 0
"""
post_uninstall_script = """
if [ "$1" -ge "1" ]; then
  if [ "`readlink /etc/alternatives/mta`" == "/usr/sbin/sendmail.into-mbox" ]; then
    /usr/sbin/alternatives --set mta /usr/sbin/sendmail.into-mbox
  fi
fi
"""

[package.metadata.generate-rpm.provides]
MTA = "*"

[package.metadata.generate-rpm.requires]
"/usr/sbin/alternatives" = "*"
